sass/_forms.scss
/************************************************************************
EDITOR
************************************************************************/

/* old forms */
.cn-editor {
  position: fixed;
  top: 73px;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: auto;
}

/* new forms */
.cn-form {
  margin: 0 auto;
  width: $page-width;
  overflow: auto;

  &.cn-form-cols-2 {
    max-width: 1000px;
  }
}

.cn-form-body {
  padding: 25px;
}

fieldset,
section {
  margin: 25px 0 0;
  border: 0;
  border-top: 1px solid $form-divider;
}

section {
  padding: 25px 0 0;
}

fieldset {
  padding: 55px 0 0;
  position: relative;

  legend {
    position: absolute;
    top: 17px;

    &.collapsible {
      cursor: pointer;
    }
  }

  label {
    font-size: 12px;
    font-weight: 300;
    //    margin: 0; <-- make more specific
  }

  .form-control .list-group-item {
    padding: 0;
    border: 0;
    background: transparent;
  }
}

legend {
  font-size: 12px;
  font-weight: 500;
  color: $heading;
  border: 0;
  text-transform: uppercase;
}

.cn-editor,
.cn-modal,
.cn-form {
  h1 + h2, .h1 + .h2 {
    font-size: 14px;
    font-weight: 300;
    color: $sub-heading;
    margin: 0 0 15px;
  }

  h3/*.section-heading*/ {
    @extend legend;
  }

  &, p {
    font-size: 12px;
  }
}

.cn-form-head {
  //  margin-bottom: 0;
}

.cn-form-nav {
  padding: 50px 25px;
  //  border-right: 1px solid $form-divider;

  .nav-pills {
    > li {
      margin: 0 0 10px;

      > a {
        @include border-radius(0);
        font-size: 14px;
        padding: 5px 25px;
        color: $dark-grey;

        &:hover {
          background: transparent;
          color: $black;
        }

        > .badge {
          margin-top: -3px;
        }
      }

      &.active {
        > a {
          background: transparent;
          color: $black;
          border-left: 4px solid $primary-color;
          padding-left: 21px;
          font-weight: 500;

          &:hover {
            background: transparent;
            color: $black;
          }
        }
      }

      .cni {
        margin-right: 10px;
      }
    }
  }
}

.cn-form-meta {
  padding: 50px 25px;

  &.offset {
    margin-right: -26px;
    padding-left: 30px;
  }
}

@media (min-width: $break-sm) {
  .cn-form-nav-inner,
  .cn-form-meta-inner {
    position: fixed;
    width: 100%;
  }
}

// right now only used in budget reallocation page
.cn-form.cn-list {
  .cn-form-body {
    border-top: 1px solid $form-divider;
    padding: 0 0 25px;
  }

  .cn-form-meta {
    padding-top: 0;
  }
}

.form-group {
  margin-bottom: 15px;
}

label {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
}

.form-control {
  display: block;
  width: 100%;
}

input.form-control,
.input.form-control,
.input-group-addon,
textarea.form-control {
  background-color: $white;
  border: 0;
  @include box-shadow(none);
  color: inherit;
  @include border-radius($radii);
  padding: 7px 12px;
  //    height: 40px;
  position: relative;

  .cn-list table td &,
  &[disabled] {
    border: 1px solid $text-field-shadow;
    padding: 6px 11px;
  }

  &[disabled] {
    background-color: $text-field-disabled;
  }

  &.date-input {
    display: inline-block;
    width: 100px;
  }

  &:focus,
  &.focused {
    //    outline: 1px solid $form-focused-outline;
    outline: 0;
    border-color: $text-field-shadow;
    @include box-shadow(none);
  }

  &:-webkit-autofill {
    background-color: $white !important;
    -webkit-box-shadow: 0 0 0px 1000px $white inset;
  }

}

.input-group,
.cn-list table td .input-group {
  .input-group-addon,
  .form-control {
    &:not(:first-child) {
      border-left: 0;
      padding-left: 6px;
    }
    &:not(:last-child) {
      border-right: 0;
      padding-right: 6px;
    }
  }
}

textarea.form-control {
  height: auto;
  min-height: 80px;
}

.form-control-feedback {
  display: none;
}

.form-control-static,
.cn-editor p.form-control-static {
  font-size: 17px;
  line-height: 30px;
  // this is supposed to be in bootstrap??
  padding-top: 5px;
  padding-bottom: 4px;
}

.radio, .checkbox {
  padding: 0;
  //  margin-top: 20px;
  margin-bottom: 20px;

  label {
    //    font-size: 16px;
    margin-right: 20px;
    display: block;

    &.checkbox-inline, &.radio-inline {
      display: inline-block;
      padding-left: 0;
    }
  }
}

.checkbox,
.radio {
  position: relative;
  display: inline-block;
  height: 25px;
  width: 25px;
  padding: 0;
  margin: 0;

  input[type=radio],
  input[type=checkbox] {
    width: 25px;
    height: 25px;
    opacity: 0;

    + span {
      position: absolute;
      left: 0;
      top: 0;
      width: 25px;
      height: 25px;
      pointer-events: none;

      &::before {
        content: ' ';
        display: inline-block;
        width: 100%;
        height: 100%;
        background: url(#{$svg-path}light/icn-select.svg) no-repeat;
        visibility: visible;
      }
    }
  }

  input[type=radio]:checked + span::before {
    background-image: url(#{$svg-path}light/icn-radio.svg);
  }

  input[type=checkbox]:checked + span::before {
    background-image: url(#{$svg-path}light/icn-check.svg);
  }
}
/* ... */

